<resources>
    <string name="app_name">Calculator</string>
    <string name="second">2nd</string>
    <string name="deg">deg</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="x_y">xʸ</string>
    <string name="lg">lg</string>
    <string name="ln">ln</string>
    <string name="parentheses">()</string>
    <string name="sqrt">√x</string>
    <string name="ac">AC</string>
    <string name="backspace">⌫</string>
    <string name="percent">%</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="minus">−</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="comma">,</string>
    <string name="pi">π</string>
    <string name="euler">e</string>
    <string name="inverse">1/x</string>
    <string name="factorial">x!</string>

    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
</resources>
